--- a/less/global.less
+++ b/less/global.less
@@ -47,5 +47,10 @@ button {
 
 button:hover {
   .signup-button(@porcelain, @btn-bg-color, bold);
+
+  @media @mobile {
+    width: 100%;
+    height: 80px;
+  }
 }
 
